# ondemand-netstack

./: .gitignore  .gitmodules  README.md
alt_src/: .gitignore  CMakeLists.txt
alt_src/bulk_mpi/: CMakeLists.txt  all_in.sh  run_it.sh
alt_src/bulk_mpi/config/: mockup.yaml  real.yaml  real_hfile  real_rfile  test.yaml  test_hfile  test_rfile
alt_src/bulk_mpi/script/: hosts.config  pssh-node.sh
alt_src/bulk_mpi/sha256/: CMakeLists.txt
alt_src/bulk_mpi/src/: CMakeLists.txt  bulk_app.cpp  bulk_app.h  bulk_mpi.cpp  bulk_mpi.h  bulk_rdma.cpp  control_host.cpp  dummy_host.cpp  endhost.cpp  fake_data.cpp  fake_data.h  globals.h  main.cpp  mpi_transport.h  pkt_crafter.h  rdma_transport.h  run_funcs.h  stats.h  transport.h  utils.h  yaml_config.h
alt_src/data/: barrier_data_25us_100k_1v.txt  barrier_data_25us_10k_1v.txt  barrier_data_25us_1m_1v.txt  isend_data_25us_100k_100v.txt  isend_data_25us_100k_10v.txt  isend_data_25us_100k_1v.txt  isend_data_25us_10k_1v.txt  isend_data_25us_1m_1v.txt
alt_src/memshare/: CMakeLists.txt  interproc_spsc.cpp  interproc_spsc.h  shared_buffer.h
alt_src/mpi_test/: blk_rfile  bulk_run.sh  h_file  rk_file  run.sh  src_rotor_test.cpp  tmp_hfile  tmp_rfile
alt_src/scripts/: endhost_setup.py  endhost_setup_control.py  graph_utils.py  misc_python.py  mpi_bulk_verifier.py
alt_src/test/: CMakeLists.txt  memshare_fork
script/: build.sh  config
script/microbenchmark/: mpi-launch.sh
script/transport/: config  launch-with-custom-socket.sh  mpi-launch.sh
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  simple_client.c  simple_listener.c  simple_server.c  simple_talker.c  socket_wrapper.c
src/ipc/: dccs_message.h  ipc_server.h
src/lib/: dccs_config.h  dccs_utils.h  logging.h
src/microbenchmark/: dccs_utils.h  mpi_main.c
src/socket/: CMakeLists.txt  dccs_socket.cc
src/test/: CMakeLists.txt  test_dccs_utils.cc
src/test/transport/: CMakeLists.txt
src/transport/: CMakeLists.txt  connection_manager.h  dccs_config.h  dccs_message.h  dccs_socket.cc  dccs_utils.h  ipc_server.h  mpi_daemon.cc  mpi_server.h  socket_wrapper.c
src/transport/mpi/: CMakeLists.txt  mpi_daemon.cc  mpi_server.h
