CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(BULK_MPI CXX)

SET(CC_FLAGS "-Wpedantic -Wconversion -Wall")
SET(CMAKE_C_STANDARD 11)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${CC_FLAGS}")
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CC_FLAGS}")

INCLUDE_DIRECTORIES(yaml-cpp/include src)

ADD_SUBDIRECTORY(yaml-cpp)
ADD_SUBDIRECTORY(src)
